# oca-addons-repo-template

./: .editorconfig  .eslintrc.yml  .flake8  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .pre-commit-config.yaml.jinja  .prettierrc.yml  .pylintrc-mandatory.jinja  .pylintrc.jinja  .travis.yml.jinja  CONTRIBUTING.md  LICENSE  README.md  README.md.jinja  copier.yml  oca_dependencies.txt  pyproject.toml  pytest.ini  setup.cfg  test-requirements.txt  {{ _copier_conf.answers_file }}.jinja
.github/workflows/: automerge.yml  clean-merged-branch.yml  lint.yml  stale.yml  test.yml  test.yml.jinja  tests.yml.jinja
src/: .flake8.jinja  .gitattributes  .gitignore.jinja  .pre-commit-config.yaml.jinja  .pylintrc-mandatory.jinja  .pylintrc.jinja  .travis.yml.jinja  README.md.jinja  {% if 12 < odoo_version < 18 %}.eslintrc.yml{% endif %}.jinja  {% if ci == 'Travis' %}.travis.yml{% else %}.t2d.yml{% endif %}.jinja  {% if enable_checklog_odoo %}checklog-odoo.cfg{% endif %}  {% if github_odoo_ee %}runboat.ee{% endif %}.jinja  {% if odoo_version > 12 %}.eslintrc.yml{% endif %}  {% if odoo_version >= 18 %}.prettierrc.cjs{% endif %}  {% if odoo_version >= 18 %}eslint.config.cjs{% endif %}  {% if odoo_version >= 19 %}eslint.config.cjs{% endif %}  {% if use_ruff %}.ruff.toml{% endif%}.jinja
src/.github/workflows/: pre-commit.yml.jinja  tagging.yml.jinja  {% if ci == 'GitHub' %}test.yml{% endif %}.jinja  (+1 more)
tests/: conftest.py  test_copy.py  test_pre_commit.py
version-specific/13.0/: .pre-commit-config.yaml  .pre-commit-config.yaml.jinja
version-specific/8.0/: .pre-commit-config.yaml
version-specific/mqt-compat/: .flake8  .pre-commit-config.yaml.jinja  .pylintrc-mandatory.jinja  .pylintrc.jinja
