[tool.poetry]
name = "cetmix-addons-repo-template"
version = "0.0.0" # Just a placeholder; the real version is the git tag
description = "Template for Cetmix addon repos"
authors = ["Cetmix"]
license = "GPL-3"

[tool.poetry.dependencies]
python = "^3.7.0"

[tool.poetry.dev-dependencies]
copier = ">=7"
pytest = "*"
pre-commit = "*"
pytest-xdist = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# ruff

[tool.ruff]
fix = true

[tool.ruff.lint]
extend-select = [
    "UP",  # pyupgrade
    "I",  # isort
]
