[tool.poetry]
name = "xxp-addons-repo-template"
version = "0.0.0" # Just a placeholder; the real version is the git tag
description = "Template for XXP addon repos"
authors = ["XXP"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9.0"
pyyaml = ">=6.0.2"

[tool.poetry.dev-dependencies]
copier = ">=9"
pytest = "*"
pre-commit = "*"
pytest-xdist = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# ruff

[tool.ruff]
fix = true

[tool.ruff.lint]
extend-select = [
    "UP",  # pyupgrade
    "I",  # isort
]
